Refactor: Modernize layout parsing with Kotlin and Moshi codegen
This commit refactors the entire layout parsing and data model layer, replacing legacy Java classes with modern Kotlin data classes and leveraging Moshi's codegen for improved performance, type safety, and maintainability.

Key changes:
- Replaced `Cell.java`, `CellParam.java`, and `LayoutConfig.java` with immutable Kotlin data classes (`Cell.kt`, `CellConfig.kt`, `LayoutConfig.kt`).
- Introduced type-safe enums (`CellType`, `CellCategory`, `HelpPictureType`) to replace string-based logic, eliminating large `switch` statements in the adapter.
- Integrated Moshi codegen (KSP) for efficient, reflection-free JSON parsing.
- Added a singleton `MoshiProvider` to share the Moshi instance across the app.
- Implemented robust validation logic within the new model classes.
- Updated JSON layout files (`crowd_layout.json`, `pit_layout.json`, `special_layout.json`) to match the new data class structure.
- Refactored `MultiviewTypeAdapter` to use the new Kotlin models and enums, simplifying the code.
- Upgraded Kotlin version to 1.9.20 and Java compatibility to 17.